# goit-pythonweb-hw-10

./: main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 18f06c67e021_add_to_model_user_filed_confirmed.py  243f69c4a25c_init.py  7f256114bb7a_init.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  users.py
